2014-04-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_steps): Avoid overflow in clipping code.
	Bug #1390

2014-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse):  Disallow defining "set lt N lt M".
	This used to mean "define effective linetype N to be the hidden device
	specific linetype M", except that in other contexts it meant "use 
	effective linetype M rather than effective linetype N". Version 5
	distinguishes between color and dashpatten, so require an explicit 
	command to set one or both rather than an ambiguous old-style request.

	* src/save.c (save_pm3dcolor save_linetype):  Save special linetypes
	by keyword rather than a magic number (e.g. lt bgnd rather than -3).

2014-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_types.h src/misc.c (lp_parse) src/misc.h src/plot2d.c
	src/plot3d.c src/set.c:  Revise the parameters passed to lp_parse() so
	that the legal options can vary depending on the identity of the caller.

	* src/term.c (test_term): Reset to default font after Bold/Italic test.
	Bug #1387

2014-04-24  Dima Kogan  <dima@secretsauce.net>

	* src/mouse.c (do_zoom_scroll_up):  Fix typo that causes incorrect
	manipulation of y2 axis scale during zoom.
	Bug (Patch #647)

2014-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/graph3d.* src/set.c src/show.c src/save.c
	docs/gnuplot.doc:  Introduce a scale parameter "set view map {scale}"
	and set the default size of a plot in this mode to approximately the
	same as a default 2D plot.

	* src/command.c (replotrequest):  It's now OK to have a range in a
	replot command, since it can be applied to the new plot piece only.

	* src/datafile.c (df_readascii):  If a read request returns a string
	rather than a numerical value, nevertheless fill in the numerical 
	value as NaN.  This is better than leaving some random garbage there
	(in practice probably some earlier data value).
	Bugfix.
