@@ -1,3 +1,9 @@
+2014-04-26  Dima Kogan  <dima@secretsauce.net>
+
+	* src/mouse.c (do_zoom rescale_around_mouse):  Handle various conditions
+	that caused zooming around the current mouse position to fail.
+	Bug #1380
+
 2014-04-26  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_steps): Avoid overflow in clipping code.
